--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/mobile.css" />
+    <link rel="stylesheet" href="./css/tablet.css" />
+    <link rel="stylesheet" href="./css/desktop.css" />
   </head>
   <body>
     <!--Шапка сайта-->
@@ -60,7 +63,7 @@
         </address>
       </div>
     </header>
-
+    
     <!--Уникальный контент-->
     <main>
       <!-- Hero section -->
@@ -295,6 +298,7 @@
           </ul>
         </div>
       </section>
+      <!-- Castomers -->
       <section class="castomers">
         <div class="castomers-container container">
           <h2 class="castomers-title">Customers</h2>
@@ -345,6 +349,7 @@
         </div>
       </section>
     </main>
+
     <!--Подвал-->
     <footer class="footer">
       <!--Logo-->
@@ -404,7 +409,8 @@
                 placeholder="E-mail"
                 required
               />
-              <button type="submit" class="footer-form-sumbit">Subscribe
+              <button type="submit" class="footer-form-sumbit">
+                Subscribe
                 <svg class="footer-button-icon" width="24" height="20">
                   <use href="./images/icons.svg#footer-sumbit"></use>
                 </svg>
@@ -496,5 +502,6 @@
     </div>
 
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
