--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="container header-container">
         <!-- Navigation -->
         <nav class="header-nav">
-          <!--Logo-->
+          <!-- Logo -->
           <a href="./index.html" class="header-logo link"
             >Web<span class="logo-studio">Studio</span></a
           >
@@ -44,16 +44,16 @@
           </ul>
         </nav>
 
-        <!--Contacts-->
+        <!-- Contacts -->
         <address class="address">
           <ul class="header-contacts list">
-            <!--Mail-->
+            <!-- Mail -->
             <li>
               <a href="mailto:info@devstudio.com" class="header-mail link"
                 >info@devstudio.com</a
               >
             </li>
-            <!--Tel-->
+            <!-- Tel -->
             <li>
               <a href="tel:+110001111111" class="header-tel link"
                 >+11 (000) 111-11-11</a
@@ -62,8 +62,8 @@
           </ul>
         </address>
       </div>
-    </header>
-    
+    </header> 
+
     <!--Уникальный контент-->
     <main>
       <!-- Hero section -->
@@ -77,7 +77,7 @@
       </section>
       <!-- Information section -->
       <section class="info">
-        <div class="container">
+        <div class="container container-sm">
           <h2 class="info-title none">Plans</h2>
           <ul class="info-list">
             <li class="info-item list">
@@ -132,7 +132,7 @@
         </div>
       </section>
       <!--Информационный Блок 2-->
-      <section class="examples">
+       <section class="examples">
         <div class="container">
           <h2 class="examples-title">What are we doing</h2>
           <ul class="examples-list list">
@@ -141,9 +141,9 @@
             <li><img src="./images/3.jpg" alt="KompTel" width="360" /></li>
           </ul>
         </div>
-      </section>
+      </section> 
       <!-- Our Team -->
-      <section class="team">
+       <section class="team">
         <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
@@ -297,9 +297,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> 
       <!-- Castomers -->
-      <section class="castomers">
+       <section class="castomers">
         <div class="castomers-container container">
           <h2 class="castomers-title">Customers</h2>
           <ul class="castomers-list list">
@@ -347,12 +347,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> 
     </main>
 
     <!--Подвал-->
-    <footer class="footer">
-      <!--Logo-->
+     <footer class="footer">
+      <!-- Logo -->
       <div class="footer-container container">
         <div class="footer-conytainer-2">
           <a href="./index.html" class="footer-logo link"
@@ -419,7 +419,7 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> 
     <div class="backdrop is-hidden" data-modal>
       <!-- <div class="backdrop is-hidden" data-modal> -->
       <div class="modal">
