--- a/index.html
+++ b/index.html
@@ -22,11 +22,9 @@
   </head>
   <body>
     <!--Шапка сайта-->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
-        <!-- Navigation -->
         <nav class="header-nav">
-          <!-- Logo -->
           <a href="./index.html" class="header-logo link"
             >Web<span class="logo-studio">Studio</span></a
           >
@@ -44,16 +42,13 @@
           </ul>
         </nav>
 
-        <!-- Contacts -->
         <address class="address">
           <ul class="header-contacts list">
-            <!-- Mail -->
             <li>
               <a href="mailto:info@devstudio.com" class="header-mail link"
                 >info@devstudio.com</a
               >
             </li>
-            <!-- Tel -->
             <li>
               <a href="tel:+110001111111" class="header-tel link"
                 >+11 (000) 111-11-11</a
@@ -62,19 +57,19 @@
           </ul>
         </address>
       </div>
-    </header> 
+    </header>  -->
 
     <!--Уникальный контент-->
     <main>
       <!-- Hero section -->
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" data-modal-open class="hero-button">
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
       <!-- Information section -->
       <section class="info">
         <div class="container container-sm">
@@ -144,7 +139,7 @@
       </section> 
       <!-- Our Team -->
        <section class="team">
-        <div class="container">
+        <div class="container container-sm">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-item list">
@@ -303,42 +298,42 @@
         <div class="castomers-container container">
           <h2 class="castomers-title">Customers</h2>
           <ul class="castomers-list list">
-            <li class="castomers-item">
+            <li class="castomers-item castomers-item-items">
               <a href="" class="castomers-link link">
                 <svg class="castomers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-client-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="castomers-item">
+            <li class="castomers-item castomers-item-items">
               <a href="" class="castomers-link link">
                 <svg class="castomers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-client-2"></use>
                 </svg>
               </a>
             </li>
-            <li class="castomers-item">
+            <li class="castomers-item castomers-item-items">
               <a href="" class="castomers-link link">
                 <svg class="castomers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-client-3"></use>
                 </svg>
               </a>
             </li>
-            <li class="castomers-item">
+            <li class="castomers-item castomers-item-items">
               <a href="" class="castomers-link link">
                 <svg class="castomers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-client-4"></use>
                 </svg>
               </a>
             </li>
-            <li class="castomers-item">
+            <li class="castomers-item castomers-item-items">
               <a href="" class="castomers-link link">
                 <svg class="castomers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-client-5"></use>
                 </svg>
               </a>
             </li>
-            <li class="castomers-item">
+            <li class="castomers-item castomers-item-items">
               <a href="" class="castomers-link link">
                 <svg class="castomers-icon" width="104" height="56">
                   <use href="./images/icons.svg#icon-client-6"></use>
@@ -350,9 +345,8 @@
       </section> 
     </main>
 
-    <!--Подвал-->
-     <footer class="footer">
-      <!-- Logo -->
+    <!--Footer-->
+     <!-- <footer class="footer">
       <div class="footer-container container">
         <div class="footer-conytainer-2">
           <a href="./index.html" class="footer-logo link"
@@ -419,7 +413,7 @@
           </form>
         </div>
       </div>
-    </footer> 
+    </footer>  -->
     <div class="backdrop is-hidden" data-modal>
       <!-- <div class="backdrop is-hidden" data-modal> -->
       <div class="modal">
