--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!--Шапка сайта-->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a href="./index.html" class="header-logo link"
@@ -57,19 +57,19 @@
           </ul>
         </address>
       </div>
-    </header>  -->
+    </header> 
 
     <!--Уникальный контент-->
     <main>
       <!-- Hero section -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" data-modal-open class="hero-button">
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- Information section -->
       <section class="info">
         <div class="container container-sm">
@@ -346,7 +346,7 @@
     </main>
 
     <!--Footer-->
-     <!-- <footer class="footer">
+     <footer class="footer">
       <div class="footer-container container">
         <div class="footer-conytainer-2">
           <a href="./index.html" class="footer-logo link"
@@ -413,7 +413,7 @@
           </form>
         </div>
       </div>
-    </footer>  -->
+    </footer> 
     <div class="backdrop is-hidden" data-modal>
       <!-- <div class="backdrop is-hidden" data-modal> -->
       <div class="modal">
