--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
     <!--Уникальный контент-->
     <main>
       <!-- Hero section -->
-      <!-- <section class="hero">
+      <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button type="button" data-modal-open class="hero-button">
             Order Service
           </button>
         </div>
-      </section> -->
+      </section>
       <!-- Information section -->
       <section class="info">
         <div class="container container-sm">
@@ -429,34 +429,34 @@
           <div class="form-group">
             <label class="form-label">
               <span class="text-form-b form-title">Name</span>
-              <div class="form-control">
+              <span class="form-control">
                 <input type="text" class="form-input" name="name" required />
                 <svg class="form-icon" width="12" height="12">
                   <use href="./images/icons.svg#icon-person"></use>
                 </svg>
-              </div>
+              </span>
             </label>
           </div>
           <div class="form-group">
             <label class="form-label">
               <span class="form-title">Phone</span>
-              <div class="form-control">
+              <span class="form-control">
                 <input type="text" class="form-input" name="tel" required />
                 <svg class="form-icon" width="12" height="12">
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
-              </div>
+              </span>
             </label>
           </div>
           <div class="form-group">
             <label class="form-label">
               <span class="form-title">Email</span>
-              <div class="form-control">
+              <span class="form-control">
                 <input type="text" class="form-input" name="email" required />
                 <svg class="form-icon" width="12" height="12">
                   <use href="./images/icons.svg#icon-email"></use>
                 </svg>
-              </div>
+              </span>
             </label>
           </div>
           <div class="form-group form-group-b">
@@ -477,11 +477,11 @@
               id="policy"
             />
             <label for="policy" class="form-check">
-              <div class="form-check-element">
+              <span class="form-check-element">
                 <svg class="form-checkbox-item" width="10" height="8">
                   <use href="./images/icons.svg#icon-ok"></use>
                 </svg>
-              </div>
+              </span>
               <span class="form-check-text"
                 >I accept the terms and conditions of the
                 <a href="" class="form-check-text-link">Privacy Policy</a></span
