--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
     </main>
 
     <!--Footer-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="footer-container container">
         <div class="footer-conytainer-2">
           <a href="./index.html" class="footer-logo link"
@@ -357,7 +357,7 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="footer-container-2">
+        <div class="footer-container-3">
           <p class="footer-title">Social media</p>
           <ul class="footer-list list">
             <li class="footer-item">
@@ -390,7 +390,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer-container-3">
+        <div class="footer-container-4">
           <form class="footer-form">
             <p class="footer-form-text">Subscribe</p>
             <span class="footer-form-wraper">
@@ -413,7 +413,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <!-- <div class="backdrop is-hidden" data-modal> -->
       <div class="modal">
