--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Studio</title>
     <link
       rel="stylesheet"
       href="node_modules/modern-normalize/modern-normalize.css"
@@ -22,42 +22,57 @@
   </head>
   <body>
     <!--Шапка сайта-->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container header-container">
-        <nav class="header-nav">
-          <a href="./index.html" class="header-logo link"
-            >Web<span class="logo-studio">Studio</span></a
-          >
+        <a href="./index.html" class="header-logo link"
+          >Web<span class="logo-studio">Studio</span></a
+        >
+        <button class="header-button" type="button">
+          <svg class="header-button-svg" width="32" height="22">
+            <use href="./images/icons.svg#mobile-modal"></use>
+          </svg>
+        </button>
+        <div class="header-nav-wrap">
+          <button type="button" class="header-button-close">
+            <svg class="header-button-close-svg" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+          <nav class="header-nav">
+            <ul class="header-list list">
+              <li class="header-item">
+                <a href="./index.html " class="header-link link active"
+                  >Studio</a
+                >
+              </li>
+              <li class="header-item">
+                <a href="./portfolio.html" class="header-link link"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="header-item">
+                <a href="" class="header-link link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
 
-          <ul class="header-list list">
-            <li class="header-item">
-              <a href="./index.html " class="header-link link active">Studio</a>
-            </li>
-            <li class="header-item">
-              <a href="./portfolio.html" class="header-link link">Portfolio</a>
-            </li>
-            <li class="header-item">
-              <a href="" class="header-link link">Contacts</a>
-            </li>
-          </ul>
-        </nav>
-
-        <address class="address">
-          <ul class="header-contacts list">
-            <li>
-              <a href="mailto:info@devstudio.com" class="header-mail link"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a href="tel:+110001111111" class="header-tel link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+          <address class="address">
+            <ul class="header-contacts list">
+              <li>
+                <a href="mailto:info@devstudio.com" class="header-mail link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+110001111111" class="header-tel link"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
       </div>
-    </header> -->
+    </header>
 
     <!--Уникальный контент-->
     <main>
