--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </li>
           </ul>
         </address>
-        <!-- </div> -->
+        
         <button class="header-button js-open-menu " aria-expanded="false" type="button">
           <svg class="header-button-svg" width="32" height="22">
             <use href="./images/icons.svg#mobile-modal"></use>
@@ -74,7 +74,7 @@
             </button>
             <ul class="mob-menu-list list">
               <li class="mob-menu-list-item">
-                <a class="mob-menu-item mob-header-link nav-link" href="./index.html">Studio</a>
+                <a class="active mob-menu-item mob-header-link nav-link" href="./index.html">Studio</a>
               </li>
               <li class="mob-menu-list-item">
                 <a class="mob-menu-item mob-header-link nav-link" href="./portfolio.html">Portfolio</a>
@@ -89,10 +89,10 @@
               <address>
                 <ul class="mob-menu-contacts list">
                   <li class="contacts-item">
-                    <a href="tel:+110001111111" class="mob-contacts is-active">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="mob-contacts-tel">+11 (000) 111-11-11</a>
                   </li>
                   <li  class="contacts-item">
-                    <a href="mailto:info@devstudio.com"  class="mob-contacts">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com"  class="mob-contacts-mail">info@devstudio.com</a>
                   </li>
                 </ul>
               </address>
@@ -100,7 +100,7 @@
                 <li>
                   <a href="" class="social-list-link">
                     <svg class="social-list-icon-team social-list-icon">
-                      <use href="./images/sprite.svg#icon-instagram"></use>
+                      <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
